# deal-coaching-toolkit

./: AGENT.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/deal_coaching_toolkit/: __init__.py  cli.py  core.py
tests/: test_core.py
