[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-coaching-toolkit"
version = "0.1.0"
description = "Call transcript analysis with objection detection and next-best-action suggestions."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/deal-coaching-toolkit"
Issues = "https://github.com/erron-ai/deal-coaching-toolkit/issues"

[project.scripts]
deal-coaching-toolkit = "deal_coaching_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
